--- a/user/sususu/templates/Exam.html
+++ b/user/sususu/templates/Exam.html
@@ -9,21 +9,21 @@
 </head>
 
 <body>
-    <!-- 시험 문제제 -->
+    <!-- 시험 문제 -->
     <div class="exam-section">
         <h1 id="examTitle"></h1>
         <div id="exam-container">Loading...</div>
     </div>
-    <!-- omr 답안지지 -->
+    <!-- omr 답안지 -->
     <div class="omr-section">
         <h2 class="fixed-header" style="text-align: center; font-size: 35px;">답 안 지</h2>
         <div id="omr-container" class="omr-sheet"></div>
     </div>
-    <!-- 제출하기 버튼튼 -->
+    <!-- 제출하기 버튼 -->
     <div class="submit">
         <button class="submit-btn" onclick="submitAnswers()">제출하기</button>
     </div>
-    <!-- 남은시간 타이머머 -->
+    <!-- 남은시간 타이머 -->
     <div class="timer" id="timer">
         남은 시간 : <span id="time-left">60:00</span>
     </div>
