--- a/user/sususu/templates/home.html
+++ b/user/sususu/templates/home.html
@@ -139,6 +139,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            margin-bottom: 10px;
         }
 
         .login-container button:hover {
